# shark

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: CI.yaml  unittests.yaml
fixtures/: rtm_15m_w_gaps.json
shark/: __init__.py  _version.py  dataframe_ext.py  exceptions.py  extension.py  schemas.py  shark.py  utils.py
shark/calc/: __init__.py  fill.py  gaps.py  interpolate.py  resample.py  utils.py
shark/preprocessing/: encoding.py  extract_xy.py  tsinterpolation.py
tests/: __init__.py  fixtures.py  test_calc_fill.py  test_calc_gaps.py  test_calc_interpolate.py  test_calc_resample.py  test_dataframe_ext.py  test_encoding.py  test_extract_xy.py  test_schemas.py  test_shark.py  test_shark_extension.py  test_smoke.py  test_tsinterpolation.py  test_utils.py  test_version.py
